--- a/app/static/lang/ru.json
+++ b/app/static/lang/ru.json
@@ -8,5 +8,26 @@
     "calendar_empty_title": "Упси! Нам нечего выводить :)",
     "calendar_empty_p1": "Вы либо сейчас вместе и обнимаетесь, либо забыли про суть функционала!",
     "calendar_empty_p2": "Календарь выводится от даты уезда вашего любчика мисиписячки мисисички пусички лапочки до даты его приезда! <strong>Задай ее в \"Настроечках\" :)</strong>",
-    "calendar_empty_p3": "Ну а если все же твоя мисяписясися рядом с тобой, значит возвращайся сюда, когда это будет не так :("
+    "calendar_empty_p3": "Ну а если все же твоя мисяписясися рядом с тобой, значит возвращайся сюда, когда это будет не так :(",
+
+    "first_launch_title": "Привет! 👋 Первый запуск",
+    "first_launch_text_ru": "<p>Please choose your preferred language and set the main dates in the \"Settings\" section.</p><p>After configuring, <strong>make sure</strong> to press the \"Save\" button at the top of the settings page.\uD83D\uDC49\uD83D\uDC48</p><p>Пожалуйста, выбери предпочитаемый язык и настрой основные даты в разделе \"Настроечки\".</p><p>После настройки <strong>обязательно</strong> нажми кнопку \"Сохранить\" вверху страницы настроек. 👉👈</p>",
+    "first_launch_text_en": "<p>Please choose your preferred language and set the main dates in the \"Settings\" section.</p><p>After configuring, <strong>make sure</strong> to press the \"Save\" button at the top of the settings page. 👉👈</p>",
+    "modal_ok_button": "ok...",
+
+    "modal_unsaved_title": "Несохраненные изменения",
+    "modal_unsaved_text": "У тебя есть несохраненные изменения. Хочешь сохранить их перед выходом?",
+    "modal_save_button": "Сохранить и выйти",
+    "modal_discard_button": "Не сохранять",
+    "modal_cancel_button": "Отмена",
+
+    "settings_section_global": "Глобальные Настройки",
+    "settings_first_launch_hint": "Это первый запуск! Пожалуйста, проверь и сохрани настройки.",
+    "settings_language_label": "Язык Интерфейса",
+    "settings_language_desc": "Выбери язык отображения текстов.",
+    "settings_animations_label": "Включить анимации",
+    "settings_animations_desc": "Плавные переходы, пульсация кнопок и таймеров при наведении.",
+    "settings_effects_label": "Включить эффекты",
+    "settings_effects_desc": "Визуальные эффекты частиц при отметке дней и завершении месяца.",
+    "settings_save_button": "Сохранить и Перезагрузить"
 }
