feat(settings): Реализация модуля 'Настройки календаря' (Стикеры, День приезда, Превью)

--- a/app/static/lang/ru.json
+++ b/app/static/lang/ru.json
@@ -61,5 +61,35 @@
 
     "settings_desc_timers_subtitle_custom": "Дополнительные Таймеры",
     "settings_desc_timers_subtitle_custom_desc": "Этот список таймеров отображается под таймером \"Мы Вместе\".",
-    "settings_timers_add_button": "+ Добавить таймер"
+    "settings_timers_add_button": "+ Добавить таймер",
+
+    "settings_section_calendar": "Настройки Календаря",
+    "settings_desc_section_calendar": "Настройте внешний вид сетки календаря, отметок и дня приезда.",
+    "settings_calendar_subtitle_general": "Общие",
+    "settings_calendar_save_zoom_label": "Сохранять Зум",
+    "settings_calendar_save_zoom_desc": "Запоминает выбранный вами масштаб (Ctrl + Колесо) между запусками.",
+    "settings_calendar_subtitle_sticker": "Стикеры Дней (X)",
+    "settings_sticker_emoji_label": "Символ",
+    "settings_sticker_emoji_desc": "Символ или Emoji (напр., X, ❤️), который ставится при клике.",
+    "settings_sticker_color_label": "Цвет Символа",
+    "settings_sticker_color_desc": "Цвет этого символа.",
+    "settings_sticker_scale_label": "Масштаб Символа",
+    "settings_sticker_scale_desc": "Множитель размера (напр., 1.0 = 100%, 1.5 = 150%).",
+    "settings_sticker_rotation_label": "Макс. Случайный Поворот",
+    "settings_sticker_rotation_desc": "Стикер будет повернут на случайный угол от -N° до +N°.",
+    "settings_calendar_marked_bg_label": "Цвет Фона Отметки",
+    "settings_calendar_marked_bg_desc": "Фон ячейки, которая была отмечена.",
+    "settings_preview_label": "Превью",
+    "settings_preview_sticker_desc": "Как будет выглядеть отметка (слева: макс. поворот, центр: фон, справа: +макс. поворот).",
+    "settings_desc_calendar_subtitle_arrival": "День Приезда",
+    "settings_arrival_use_bg_label": "Включить Фон",
+    "settings_arrival_bg_color_label": "Цвет Фона",
+    "settings_arrival_bg_color_desc": "Особый цвет фона для ячейки дня приезда.",
+    "settings_arrival_use_sticker_label": "Включить Стикер",
+    "settings_arrival_emoji_label": "Символ",
+    "settings_arrival_scale_label": "Масштаб",
+    "settings_preview_arrival_desc": "Как будет выглядеть ячейка дня приезда.",
+    "settings_calendar_subtitle_appearance": "Внешний Вид",
+    "settings_calendar_empty_bg_label": "Цвет Пустой Ячейки",
+    "settings_calendar_empty_bg_desc": "Фон для дней, которые не входят в диапазон (например, 1-30 Сентября)."
 }
