--- a/todo
+++ b/todo
@@ -1,4 +1,11 @@
 //TODO
-ВО ВРЕМЯ ВВОДА ЖЕЛАТЕЛЬНО ЗАПРЕТИТЬ ОБНОВЛЕНИЕ так как если вводить цифрами (ручной ввод) они сбиваются что совсем не круто!!!!!!!
+ОЧень странно поведение стикеров после применение скейла (они становятся непропорционально огромными!)
+(на 1 все норм. стоит поставить 2 он словно становиться раз в 10 больше)
 
-Стикер должен вылезать за пределы кнопок
+
+
+Если включен тег на ограничение на 20 символов - нужно
+
+В опасной зоне - сбросить все все параметры (снизу upd рекомендую сделать копию configa по пути апдата mrhouston)
+
+Кнопка сохранить и перезапустить в один момент перестает ползти вниз и уползает наверх вне экрана.
